feat: create activity service (get only)
